--- a/WDD-130/WWR/Style/site-plan-rafting.css
+++ b/WDD-130/WWR/Style/site-plan-rafting.css
@@ -2,14 +2,14 @@
 /* if you are using any Google fonts change the font names below to your fonts. 
 Any spaces in your font name should be replaced with a +. 
 Fonts are separated by a & */
-@import url('https://fonts.googleapis.com/css2?family=IM+Fell+French+Canon&family=Lato:ital,wght@0,400;0,700;1,400&display=swap');;
+@import url('https://fonts.googleapis.com/css2?family=IM+Fell+French+Canon&family=Lato:ital,wght@0,400;0,700;1,400&display=swap');
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #009ffd   ;
-  --secondary-color: #2a2a72 ;
+  --primary-color: #009FFD   ;
+  --secondary-color: #2A2A72 ;
   --accent1-color: #232528;
-  --accent2-color: #eaf6ff;
+  --accent2-color: #EAF6FF;
 
   /* change the values below to your chosen font(s) */
   --heading-font: "IM Fell French Canon";
@@ -21,8 +21,8 @@ Fonts are separated by a & */
   --paragraph-color-on-white: black; /* paragraph text on a white background */ 
   --paragraph-color-on-color: #FFFFFF; /* paragraph text on a colored background */ 
   --paragraph-background-color: #000000;
-  --nav-link-color: #396E94;
-  --nav-background-color: #D4AC0D;
+  --nav-link-color: #003f6c;
+  --nav-background-color: #2db4b4;
   --nav-hover-link-color: white;
   --nav-hover-background-color: #396E94;
 }
@@ -82,7 +82,7 @@ p {
   height: 3em;
 }
 .primary {
-  background-color: var(--primary-color);
+  background-color: #009FFD ;
 }
 .secondary {
   background-color: var(--secondary-color);
