--- a/WDD-130/WWR/Style/style.css
+++ b/WDD-130/WWR/Style/style.css
@@ -10,6 +10,7 @@ nav a{
     background-color: black;
     color: #d9c2a3;
     text-decoration: none;
+    padding: 35px;
 }
 nav a:hover {
     background-color: black;
@@ -35,6 +36,8 @@ main section{
 
 body{
     background-color: #fcfbfb;
+    margin: 0;
+    padding: 0;
 }
 
 header{
@@ -45,6 +48,8 @@ footer{
     background-color: lightblue;
     background-color: black;
     color: #d9c2a3;
+    padding: 025px 50px;
+    margin-top: 200px;
 }
 footer a{
     background-color: black;
@@ -61,12 +66,20 @@ footer p{
 footer p a:hover {
     text-decoration: underline;
 }
+footer .social-img{
+    padding: 15px;
+}
 
 .book, .join{
     background-color:rgba(20,30,13, .7);
     background-color: black;
     color: #d9c2a3;
     text-decoration: none;
+    font-family: 'Rock Salt', 'Bradley Hand', sans-serif;
+    font-size: 18px;
+    padding: 015px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 .book:hover, .join:hover{
     background-color:rgba(20,30,13, .7);
@@ -76,6 +89,9 @@ footer p a:hover {
 
 .msg{
     background-color:rgba(20,30,13, .7);
+    background-color: #6f7364;
+    line-height: 1.5em;
+    padding: 35px;
 }
 
 .home-title{
@@ -96,8 +112,37 @@ h4{
 .msg p{
     background-color: black;
     color: #d9c2a3;
+    font-family: 'Rock Salt', 'Bradley Hand', sans-serif;
+    font-size: 0.8em;
 }
 
 .icon{
     width: 80px;
+    padding: 10px;
+}
+
+.home-title {
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: 2em;
+    margin-top: 10px;
+}
+
+h2{
+    margin: 0;
+}
+
+#logo_link{
+    padding: 5px;
+}
+
+.rivers-card, .camping-card, .rapids-card{
+    margin: 200px 0;
+}
+
+.card-img {
+    border: 10px solid #d9c2a3;
+}
+
+main section img {
+    box-sizing: border-box;
 }
