--- a/WDD-130/WWR/Style/style.css
+++ b/WDD-130/WWR/Style/style.css
@@ -5,6 +5,11 @@
     margin: 0 auto;
 }
 
+nav{
+    display: flex;
+    justify-content: space-around;
+}
+
 nav a{
     text-align: center;
     background-color: black;
@@ -12,14 +17,38 @@ nav a{
     text-decoration: none;
     padding: 35px;
 }
-nav a:hover {
+nav a:hover{
     background-color: black;
     background-color: black;
     color: #d9c2a3;
 }
 
-#hero-msg h1, #hero-msg h4{
+#hero-msg h1{
     text-align: center;
+}
+
+#hero-msg h4{
+    text-align: center;
+    color: white;
+}
+
+#hero{
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px; 
+}
+
+#hero-box{
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+    width: 100%;
+}
+
+#hero-msg{
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
 }
 
 .button-box{
@@ -32,6 +61,8 @@ main section{
 
 #background{
     height: 725px;
+    grid-column: 1/11;
+    grid-row: 4/9;
 }
 
 body{
@@ -42,6 +73,7 @@ body{
 
 header{
     background-color:rgba(20,30,13, .7);
+    grid-template-columns: 150px auto;
 }
 
 footer{
@@ -50,6 +82,8 @@ footer{
     color: #d9c2a3;
     padding: 025px 50px;
     margin-top: 200px;
+    align-items: center;
+    justify-content: space-around;
 }
 footer a{
     background-color: black;
@@ -92,6 +126,9 @@ footer .social-img{
     background-color: #6f7364;
     line-height: 1.5em;
     padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
 }
 
 .home-title{
@@ -131,16 +168,40 @@ h2{
     margin: 0;
 }
 
-#logo_link{
-    padding: 5px;
+#logo_link {
+    padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 
-.rivers-card, .camping-card, .rapids-card{
+.rivers-card{
     margin: 200px 0;
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+
+.camping-card{
+    margin: 200px 0;
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+
+.rapids-card{
+    margin: 200px 0;
+    grid-column: 8/10;
+    grid-row: 2/3;
 }
 
 .card-img {
     border: 10px solid #d9c2a3;
+    width: 100%;
+    transform: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+.card-img:hover{
+    opacity: .6;
+    transform: scale(1.1);
 }
 
 main section img {
@@ -149,4 +210,56 @@ main section img {
 
 .mountians{
     margin: 100px 0;
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+
+
+
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    #hero-msg h1 {
+        color: #6f7364;
+    }
+    .home-title {
+        font-size: 25px;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
