--- a/WDD-130/WWR/Style/style.css
+++ b/WDD-130/WWR/Style/style.css
@@ -1,6 +1,5 @@
 
-.content{
-    margin: 0 auto;
+#content{
     max-width: 1600px;
     margin: 0 auto;
 }
@@ -8,19 +7,20 @@
 nav{
     display: flex;
     justify-content: space-around;
+    height: 100px;
 }
 
 nav a{
     text-align: center;
-    background-color: black;
-    color: #d9c2a3;
+    align-content: center;
     text-decoration: none;
-    padding: 35px;
+    color: #fff;
+    border-radius: 10px;
+    padding: 24px 35px;
 }
 nav a:hover{
-    background-color: black;
-    background-color: black;
-    color: #d9c2a3;
+    background-color: rgba(202, 194, 194, 0.856);
+    color: white;
 }
 
 #hero-msg h1{
@@ -35,17 +35,21 @@ nav a:hover{
 #hero{
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
-    margin-top: -100px; 
+    margin-top: -100px;
+}
+
+#hero-img{
+    width: 100%;
 }
 
 #hero-box{
     grid-column: 1/4;
     grid-row: 1/3;
     z-index: -1;
-    width: 100%;
 }
 
 #hero-msg{
+    padding-bottom: 2rem;
     grid-column: 2/3;
     grid-row: 1/2;
     margin-top: 100px;
@@ -66,13 +70,19 @@ main section{
 }
 
 body{
-    background-color: #fcfbfb;
+    font-family: "Noto Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    background-color: #ece3e3;
+    font-size: 22px;
     margin: 0;
     padding: 0;
 }
 
 header{
-    background-color:rgba(20,30,13, .7);
+    background-color: rgba(18, 41, 1, 0.7);
+    display: grid;
     grid-template-columns: 150px auto;
 }
 
@@ -105,20 +115,17 @@ footer .social-img{
 }
 
 .book, .join{
-    background-color:rgba(20,30,13, .7);
-    background-color: black;
-    color: #d9c2a3;
+    background-color: #ffffff;
     text-decoration: none;
-    font-family: 'Rock Salt', 'Bradley Hand', sans-serif;
     font-size: 18px;
-    padding: 015px 30px;
+    padding: 15px 30px;
+    border-radius: 12px;
     margin-top: 50px;
-    border-radius: 5px;
 }
-.book:hover, .join:hover{
-    background-color:rgba(20,30,13, .7);
-    background-color: black;
-    color: #d9c2a3;
+.book:hover, .join:hover {
+  background-color: #0f3106;
+  color: #fff;
+  border: 2px solid #fff;
 }
 
 .msg{
@@ -132,12 +139,16 @@ footer .social-img{
 }
 
 .home-title{
-    background-color: black;
-    color: #d9c2a3;
+    font-family: "Playwrite GB S", cursive;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+    font-size: 2em;
+    margin-top: 10px;
+    color: #e0d9ec;
 }
 
 h4{
-    background-color: black;
     color: #d9c2a3;
 }
 
@@ -168,6 +179,11 @@ h2{
     margin: 0;
 }
 
+.logo{
+    height: 50%;
+    width: 50%;
+}
+
 #logo_link {
     padding-top: 5px;
     justify-self: center;
@@ -184,6 +200,7 @@ h2{
     margin: 200px 0;
     grid-column: 5/7;
     grid-row: 2/3;
+    
 }
 
 .rapids-card{
@@ -209,12 +226,23 @@ main section img {
 }
 
 .mountians{
-    margin: 100px 0;
     width: 100%;
+    box-shadow: 5px 5px 10px #6f7364;
     grid-column: 2/7;
     grid-row: 5/8;
-    box-shadow: 5px 5px 10px #6f7364;
 }
+
+.home-grid{
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+}
+
+#logo_link {
+    padding: 5px;
+    justify-self: center;
+    align-self: center;
+  }
+  
 
 
 
