--- a/WDD-130/Workout Website/Styles/personal-website.css
+++ b/WDD-130/Workout Website/Styles/personal-website.css
@@ -20,6 +20,26 @@ body {
   min-height: 100vh;
 }
 
+header .logo-left img {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  position: absolute;
+  top: 17px;
+  left: 30px;
+  object-fit: cover;
+}
+
+header .logo-right img {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  position: absolute;
+  top: 17px;
+  right: 30px;
+  object-fit: cover;
+}
+
 header {
   background-color: var(--accent1-color); /* Dark gray/black */
   color: var(--accent2-color); /* Off-white */
@@ -136,7 +156,7 @@ footer {
 .home-hero img {
   width: 100%;
   max-width: 800px;
-  border-radius: 8px;
+  border-radius: 15px;
   filter: brightness(0.5) /* Faded effect */
 }
 
@@ -150,6 +170,17 @@ footer {
   font-size: 2.5rem;
   text-shadow: 2px 2px var(--accent1-color); /* Dark shadow */
   margin: 0;
+}
+
+.purpose-h {
+  font-size: 2.5rem; /* Adjust size as needed */
+  font-weight: bold; /* Optional: make it bolder */
+  color: black; /* Optional: apply your color scheme */
+}
+
+.purpose-p {
+  font-size: 1.2rem; /* Adjust size as needed */
+  line-height: 1.8; /* Optional: increase line spacing for readability */
 }
 
 /* Growth Charts Page */
