--- a/WDD-130/Workout Website/Styles/personal-website.css
+++ b/WDD-130/Workout Website/Styles/personal-website.css
@@ -304,6 +304,14 @@ footer {
   font-weight: bold;
 }
 
+.result-box {
+  background-color: #f7f7ff;
+  border: 1px solid #ccc;
+  padding: 10px;
+  margin-top: 10px;
+  text-align: center;
+  border-radius: 5px;
+}
 
 /* Utility Classes */
 .center-text {
