--- a/WDD-130/Workout Website/Styles/personal-website.css
+++ b/WDD-130/Workout Website/Styles/personal-website.css
@@ -424,6 +424,9 @@ button:hover {
 
 /* For screens smaller than 600px (like mobile devices) */
 @media (max-width: 600px) {
+  header {
+    padding: 1rem;
+  }
   body {
     flex-direction: column;
     align-items: flex-start;
@@ -436,9 +439,24 @@ button:hover {
   .home-hero h2 {
     font-size: 1.8rem;
   }
+  header .logo-left img, header .logo-right img {
+    width: 50px;
+    height: 50px;
+  }
+  header .logo-left img {
+    top: 10px;
+    left: 15px;
+  }
+  header .logo-right img {
+    top: 10px;
+    right: 15px;
+  }
 }
 
 @media (max-width: 768px) {
+  header {
+    padding: 1rem;
+  }
   header h1 {
     font-size: 2rem;
   }
@@ -456,5 +474,17 @@ button:hover {
   .calculator-container {
     flex-direction: column;
     gap: 1.5rem;
+  }
+  header .logo-left img, header .logo-right img {
+    width: 50px;
+    height: 50px;
+  }
+  header .logo-left img {
+    top: 10px;
+    left: 15px;
+  }
+  header .logo-right img {
+    top: 10px;
+    right: 15px;
   }
 }
