--- a/WDD-130/Workout Website/Styles/personal-website.css
+++ b/WDD-130/Workout Website/Styles/personal-website.css
@@ -451,6 +451,9 @@ button:hover {
     top: 10px;
     right: 15px;
   }
+  .overlay-olympic {
+    font-size: 1.5rem;
+  }
 }
 
 @media (max-width: 768px) {
@@ -486,5 +489,8 @@ button:hover {
   header .logo-right img {
     top: 10px;
     right: 15px;
+  }
+  .overlay-olympic {
+    font-size: 3rem;
   }
 }
