--- a/WDD-130/Workout Website/Styles/personal-website.css
+++ b/WDD-130/Workout Website/Styles/personal-website.css
@@ -431,6 +431,14 @@ button:hover {
     flex-direction: column;
     align-items: flex-start;
   }
+  nav {
+    width: 100%;
+    flex-direction: column;
+  }
+  nav a {
+    text-align: center;
+    padding: 1rem;
+  }
   .chart-container,
   .calculator-container {
     flex-direction: column;
@@ -452,7 +460,7 @@ button:hover {
     right: 15px;
   }
   .overlay-olympic {
-    font-size: 1.3rem;
+    font-size: 1.5rem;
   }
 }
 
@@ -463,16 +471,17 @@ button:hover {
   header h1 {
     font-size: 2rem;
   }
-
   nav {
+    width: 100%;
     flex-direction: column;
-    align-items: center;
   }
-
+  nav a {
+    text-align: center;
+    padding: 1rem;
+  }
   .home-hero h2 {
     font-size: 2rem;
   }
-
   .chart-container,
   .calculator-container {
     flex-direction: column;
@@ -491,6 +500,6 @@ button:hover {
     right: 15px;
   }
   .overlay-olympic {
-    font-size: 1.3rem;
+    font-size: 1.5rem;
   }
 }
