--- a/WDD-130/Workout Website/Styles/personal-website.css
+++ b/WDD-130/Workout Website/Styles/personal-website.css
@@ -431,14 +431,6 @@ button:hover {
     flex-direction: column;
     align-items: flex-start;
   }
-  nav {
-    width: 100%;
-    flex-direction: column;
-  }
-  nav a {
-    text-align: center;
-    padding: 1rem;
-  }
   .chart-container,
   .calculator-container {
     flex-direction: column;
@@ -460,7 +452,7 @@ button:hover {
     right: 15px;
   }
   .overlay-olympic {
-    font-size: 1.5rem;
+    font-size: 1.4rem;
   }
 }
 
@@ -472,12 +464,8 @@ button:hover {
     font-size: 2rem;
   }
   nav {
-    width: 100%;
     flex-direction: column;
-  }
-  nav a {
-    text-align: center;
-    padding: 1rem;
+    align-items: center;
   }
   .home-hero h2 {
     font-size: 2rem;
@@ -500,6 +488,6 @@ button:hover {
     right: 15px;
   }
   .overlay-olympic {
-    font-size: 1.5rem;
+    font-size: 1.4rem;
   }
 }
